# feruca-mapper

./: Cargo.toml  README.md  arabic-weights.txt
bincode/15/tailoring/: arabic_script_sing
json/cldr-46_1/: decomp.json  fcd.json  low.json  low_cldr.json  multis.json  singles.json  variable.json
phf/: decomp.rs  fcd.rs
src/: arabic_interleaved.rs  arabic_script.rs  arabic_tailoring.rs  collation.rs  common.rs  lib.rs  main.rs  normalization.rs  trie.rs  variable.rs
