[package]
name = "feruca-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
feruca = { git = "https://github.com/theodore-s-beers/feruca" }
once_cell = "1.17.0"
regex = "1.7.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
tinyvec = "1.6.0"
unicode-canonical-combining-class = "0.5.0"
