[package]
name = "feruca-mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
feruca = { git = "https://github.com/theodore-s-beers/feruca" }
phf_codegen = "0.13.1"
postcard = { version = "1.1.3", features = ["alloc"] }
regex = "1.12.2"
rustc-hash = "2.1.1"
serde_json = "1.0.149"
unicode-canonical-combining-class = "1.0.0"
